--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 <p class="first-content">Lorem ipsum dolor sit amet, djsdnejnd ejsubd jues bjst dignissimos quisquam in.</p>
                 <p>Derah malang dan sekitarnya</p>
               </div>
-              <div class="col-md-offset-3 col-md-6 first-content scroll">
-                <div class="secondary-colorwhite first-content">
+              <div class="col-md-offset-2 col-md-8 scroll">
+                <div class="secondary-colorwhite">
                   <div class="col-md-12 col-sm-12 col-xs-12 inline button no-padding">
                     <button type="button" class="btn btn-danger" name="button">Hot</button>
                     <button type="button" class="btn btn-primary" name="button">New</button>
@@ -103,9 +103,10 @@
                   </div>
                   <div class="col-md-10 col-sm-10 col-xs-9 text-box no-padding no-margin">
                     <input id="inputcari" class="search" type="text" name="search" placeholder="Cari Buku!" value="">
+                    <div id="suggest">hahaha</div>
                   </div>
                   <div class="col-md-2 col-sm-2 col-xs-3 text-box no-padding no-margin">
-                    <button class="btn btn-lg btn-primary no-margin" type="submit" name="search"><p><i class="fa fa-search"></i></p></button>
+                    <button class="btn btn-lg btn-primary no-margin" type="submit" id="search"><p><i class="fa fa-search"></i></p></button>
                   </div>
                   <div class="col-md-12 col-sm-12 col-xs-12 populer">
                     <p class="inline secondary-colorwhite caripopuler">Pencarian populer : </p>
@@ -259,7 +260,7 @@
                     <div class="media-body garisbawah">
                       <a href="#"><h4 class="media-heading">Ini judul buku</h4></a>
                       <small>Robert Lafore</small>
-                      <h5>Diposting oleh: <br><i class="fa fa-pencil-square-o"></i> <a href="#" class="text-primary"> Budiman</a></h5>
+                      <h5><i class="fa fa-pencil-square-o"></i> Diposting oleh: <a href="#" class="text-primary"> Budiman</a></h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
                         <div class="col-md-6 col-sm-6 col-xs-12 no-padding">
@@ -282,7 +283,7 @@
                     <div class="media-body garisbawah">
                       <a href="#"><h4 class="media-heading">Ini judul buku</h4></a>
                       <small>Robert Lafore</small>
-                      <h5>Diposting oleh: <br><i class="fa fa-pencil-square-o"></i> <a href="#" class="text-primary"> Budiman</a></h5>
+                      <h5><i class="fa fa-pencil-square-o"></i> Diposting oleh: <a href="#" class="text-primary"> Budiman</a></h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
                         <div class="col-md-6 col-sm-6 col-xs-12 no-padding">
@@ -305,7 +306,7 @@
                     <div class="media-body garisbawah">
                       <a href="#"><h4 class="media-heading">Ini judul buku</h4></a>
                       <small>Robert Lafore</small>
-                      <h5>Diposting oleh: <br><i class="fa fa-pencil-square-o"></i> <a href="#" class="text-primary"> Budiman</a></h5>
+                      <h5><i class="fa fa-pencil-square-o"></i> Diposting oleh: <a href="#" class="text-primary"> Budiman</a></h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
                         <div class="col-md-6 col-sm-6 col-xs-12 no-padding">
@@ -328,7 +329,7 @@
                     <div class="media-body garisbawah">
                       <a href="#"><h4 class="media-heading">Ini judul buku</h4></a>
                       <small>Robert Lafore</small>
-                      <h5>Diposting oleh: <br><i class="fa fa-pencil-square-o"></i> <a href="#" class="text-primary"> Budiman</a></h5>
+                      <h5><i class="fa fa-pencil-square-o"></i> Diposting oleh: <a href="#" class="text-primary"> Budiman</a></h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
                         <div class="col-md-6 col-sm-6 col-xs-12 no-padding">
@@ -351,7 +352,7 @@
                     <div class="media-body garisbawah">
                       <a href="#"><h4 class="media-heading">Ini judul buku</h4></a>
                       <small>Robert Lafore</small>
-                      <h5>Diposting oleh: <br><i class="fa fa-pencil-square-o"></i> <a href="#" class="text-primary"> Budiman</a></h5>
+                      <h5><i class="fa fa-pencil-square-o"></i> Diposting oleh: <a href="#" class="text-primary"> Budiman</a></h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
                         <div class="col-md-6 col-sm-6 col-xs-12 no-padding">
