--- a/pages/onePageForum.html
+++ b/pages/onePageForum.html
@@ -61,9 +61,9 @@
             <h2 class="text-primary ">Gedebuk Forum</h2>
             <small class="secondary-color">Diskusi, tanya buku Lorem ipsum dolor sit amet.</small>
           </div>
-          <div class="col-md-12 text-center alert alert-info hero">
-            <div class="col-md-2 head"><i class="fa fa-comments icon"></i></div>
-            <div class="col-md-10">
+          <div class="col-md-12 text-center alert alert-info">
+            <div class="col-md-3 head"><i class="fa fa-comments icon"></i></div>
+            <div class="col-md-9">
               <h3>Join with us!</h3>
               <div class="garisbawah light"></div>
               <p>Belum bergabung dengan gedebuk?</p>
