--- a/pages/produk.html
+++ b/pages/produk.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
     <link rel="stylesheet" href="../css/core.css">
+    <link rel="stylesheet" href="../css/responsive.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -52,7 +53,7 @@
     </nav>
     <!--end of nav -->
 
-    <section class="sec">
+    <section class="produk">
       <div class="container">
         <div class="row">
           <div class="col-md-3">
@@ -60,6 +61,10 @@
               <img src="../assets/bg.jpeg" class="img-responsive img-thumbnail" alt="">
             </div>
             <table class="table table-bordered">
+              <tr>
+                <td>Judul Buku</td>
+                <td>Cahaya hati</td>
+              </tr>
               <tr>
                 <td>Penerbit</td>
                 <td>Air inam</td>
