--- a/pages/signup.html
+++ b/pages/signup.html
@@ -9,7 +9,7 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/animate.min.css">
     <link rel="stylesheet" href="../css/core.css">
-    <link rel="stylesheet" href="../css/media.css">
+    <link rel="stylesheet" href="../css/responsive.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -50,10 +50,10 @@
     <section class="first-content contact">
       <div class="bg"></div>
 			<div class="container well well-lg first-content">
+        <h2 class=" text-primary">Daftar</h2>
+        <p class="contact-head ">Daftar dengan akun baru. Nikmati semua kemudahan
+          yang ada, gratis!</p>
 				<div class="row contact-form">
-          <h2 class="text-center text-primary">Daftar</h2>
-          <p class="contact-head">Daftar dengan akun baru. Nikmati semua kemudahan
-            yang ada, gratis!</p>
 					<form class="first-content">
             <div class="col-md-offset-7 col-md-5">
               <div class="col-md-12 text-box">
@@ -67,8 +67,6 @@
                 <input type="email" placeholder="e-Mail" class="form-control">
                 <input type="password" placeholder="Password" class="form-control">
                 <input type="password" placeholder="Konfirmasi Password" class="form-control">
-                <small class="text-muted">Unggah foto</small>
-                <input type="file" name="" value="" >
                 <small class="block underline"><a href="#" class="text-warning">Untuk apa nomor identitas?</a></small>
                 <div class="col-md-3 no-padding">
                   <select class="form-control">
@@ -82,20 +80,21 @@
                 <div class="col-md-9 col-xs-9 col-sm-9 text-box no-padding clearfix">
                   <input type="text" placeholder="Nomor identitas" class="form-control">
                 </div>
+                <div class="clearfix"></div>
                 <small class="text-muted block">Alamat</small>
-              <textarea name="alamat" class="form-control text-box"></textarea>
-              <small class="text-warning">*Jika masih mahasiswa/pelajar</small>
-              <input type="text" placeholder="Asal Universitas/sekolah" class="form-control">
-              <div class="col-md-12 first-content">
-                <div class="col-md-2 no-padding text-left">
-                  <input class="inline no-padding" type="checkbox" name="deal" required>
+                <textarea name="alamat" class="form-control text-box"></textarea>
+                <small class="text-warning">*Jika masih mahasiswa/pelajar</small>
+                <input type="text" placeholder="Asal Universitas/sekolah" class="form-control">
+                <div class="col-md-12 first-content">
+                  <div class="col-md-2 no-padding text-left">
+                    <input class="inline no-padding" type="checkbox" name="deal" required>
+                  </div>
+                  <div class="col-md-10 no-padding add-space">
+                    <p>Setuju dengan semua <a class="text-warning underline" href="#">syarat</a> dan <a class="text-warning underline" href="#">ketentuan </a> gedebuk.</p>
+                  </div>
                 </div>
-                <div class="col-md-10 no-padding add-space">
-                  <p>Setuju dengan semua <a class="text-warning underline" href="#">syarat</a> dan <a class="text-warning underline" href="#">ketentuan </a> gedebuk.</p>
-                </div>
+                <button type="button" class="btn btn-lg btn-primary center-block" name="button">Daftar</button>
               </div>
-              <button type="button" class="btn btn-lg btn-primary center-block" name="button">Daftar</button>
-            </div>
 					</form>
 				</div>
 		</section>
