--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   </div>
                   <div class="col-md-10 col-sm-10 col-xs-9 text-box no-padding no-margin">
                     <input id="inputcari" class="search" type="text" name="search" placeholder="Cari Buku!" value="">
-                    <div id="suggest">hahaha</div>
+                    <div id="suggest"></div>
                   </div>
                   <div class="col-md-2 col-sm-2 col-xs-3 text-box no-padding no-margin">
                     <button class="btn btn-lg btn-primary no-margin" type="submit" id="search"><p><i class="fa fa-search"></i></p></button>
@@ -245,9 +245,8 @@
           <div class="col-md-8 col-sm-12 col-xs-12 no-page-padding">
             <div class="featured">
               <ul class="nav nav-tabs no-padding">
-                <li role="presentation" class="active"><a href="#" class="garisbawah">Buku Populer</a></li>
-                <li role="presentation" class="garisbawah"><a href="#" class="garisbawah text-primary">Buku baru</a></li>
-                <li role="presentation" class="garisbawah"><a href="#" class="garisbawah text-primary">Buku terlaris</a></li>
+                <li role="presentation" class="active"><a href="#" class="garisbawah text-primary">Buku terbaru</a></li>
+                <li role="presentation" class="garisbawah"><a href="#" class="garisbawah">Buku Populer</a></li>
               </ul>
               <ul class="content">
                 <li>
@@ -263,10 +262,15 @@
                       <h5><i class="fa fa-pencil-square-o"></i> Diposting oleh: <a href="#" class="text-primary"> Budiman</a></h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
-                        <div class="col-md-6 col-sm-6 col-xs-12 no-padding">
-                          <p>Harga : <span>Rp12.000</span></p>
+                        <div class="col-md-7 col-sm-6 col-xs-12 no-padding">
+                          <div class="col-md-6 space space-left beli">
+                            <p class="secondary-color">Harga Beli : <span class="text-primary">Rp12.000</span></p>
+                          </div>
+                          <div class="col-md-6 space space-right sewa">
+                            <p class="secondary-color">Harga Sewa : <span class="text-primary">Rp12.000</span></p>
+                          </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 attention">
+                        <div class="col-md-5 col-sm-5 attention">
                           <a href="#"><button type="button" class="btn btn-primary" name="button">Lihat Selengkapnya</button></a>
                         </div>
                       </div>
@@ -286,10 +290,15 @@
                       <h5><i class="fa fa-pencil-square-o"></i> Diposting oleh: <a href="#" class="text-primary"> Budiman</a></h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
-                        <div class="col-md-6 col-sm-6 col-xs-12 no-padding">
-                          <p>Harga : <span>Rp12.000</span></p>
+                        <div class="col-md-7 col-sm-6 col-xs-12 no-padding">
+                          <div class="col-md-6 space space-left beli">
+                            <p class="secondary-color">Harga Beli : <span class="text-primary">Rp12.000</span></p>
+                          </div>
+                          <div class="col-md-6 space space-right sewa">
+                            <p class="secondary-color">Harga Sewa : <span class="text-primary">Rp12.000</span></p>
+                          </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 attention">
+                        <div class="col-md-5 col-sm-5 attention">
                           <a href="#"><button type="button" class="btn btn-primary" name="button">Lihat Selengkapnya</button></a>
                         </div>
                       </div>
@@ -309,10 +318,15 @@
                       <h5><i class="fa fa-pencil-square-o"></i> Diposting oleh: <a href="#" class="text-primary"> Budiman</a></h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
-                        <div class="col-md-6 col-sm-6 col-xs-12 no-padding">
-                          <p>Harga : <span>Rp12.000</span></p>
+                        <div class="col-md-7 col-sm-6 col-xs-12 no-padding">
+                          <div class="col-md-6 space space-left beli">
+                            <p class="secondary-color">Harga Beli : <span class="text-primary">Rp12.000</span></p>
+                          </div>
+                          <div class="col-md-6 space space-right sewa">
+                            <p class="secondary-color">Harga Sewa : <span class="text-primary">Rp12.000</span></p>
+                          </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 attention">
+                        <div class="col-md-5 col-sm-5 attention">
                           <a href="#"><button type="button" class="btn btn-primary" name="button">Lihat Selengkapnya</button></a>
                         </div>
                       </div>
@@ -332,10 +346,15 @@
                       <h5><i class="fa fa-pencil-square-o"></i> Diposting oleh: <a href="#" class="text-primary"> Budiman</a></h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
-                        <div class="col-md-6 col-sm-6 col-xs-12 no-padding">
-                          <p>Harga : <span>Rp12.000</span></p>
+                        <div class="col-md-7 col-sm-6 col-xs-12 no-padding">
+                          <div class="col-md-6 space space-left beli">
+                            <p class="secondary-color">Harga Beli : <span class="text-primary">Rp12.000</span></p>
+                          </div>
+                          <div class="col-md-6 space space-right sewa">
+                            <p class="secondary-color">Harga Sewa : <span class="text-primary">Rp12.000</span></p>
+                          </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 attention">
+                        <div class="col-md-5 col-sm-5 attention">
                           <a href="#"><button type="button" class="btn btn-primary" name="button">Lihat Selengkapnya</button></a>
                         </div>
                       </div>
@@ -355,10 +374,15 @@
                       <h5><i class="fa fa-pencil-square-o"></i> Diposting oleh: <a href="#" class="text-primary"> Budiman</a></h5>
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam blanditiis neque sit necessitatibus architecto iusto voluptates ex optio, quia, ipsam cupiditate esse maiores vero dolore.</p>
                       <div class="navbody">
-                        <div class="col-md-6 col-sm-6 col-xs-12 no-padding">
-                          <p>Harga : <span>Rp12.000</span></p>
+                        <div class="col-md-7 col-sm-6 col-xs-12 no-padding">
+                          <div class="col-md-6 space space-left beli">
+                            <p class="secondary-color">Harga Beli : <span class="text-primary">Rp12.000</span></p>
+                          </div>
+                          <div class="col-md-6 space space-right sewa">
+                            <p class="secondary-color">Harga Sewa : <span class="text-primary">Rp12.000</span></p>
+                          </div>
                         </div>
-                        <div class="col-md-6 col-sm-6 attention">
+                        <div class="col-md-5 col-sm-5 attention">
                           <a href="#"><button type="button" class="btn btn-primary" name="button">Lihat Selengkapnya</button></a>
                         </div>
                       </div>
@@ -381,7 +405,7 @@
               <div class="col-md-3 col-sm-3 text-center">
                 <div class="fade-up">
                 <div class="spec center-block wow animated pulse">
-                  <h1 class="inline"><i class="fa fa-pencil fa-fw"></i></h1>
+                  <h1 class="inline"><i class="fa fa-laptop fa-fw"></i></h1>
                 </div>
                 <h2>User Interface Ramah</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, nulla.</p>
@@ -390,7 +414,7 @@
               <div class="col-md-3 col-sm-3 text-center">
                 <div class="fade-up">
                 <div class="spec center-block wow animated pulse delay-2s">
-                  <h1 class="inline"><i class="fa fa-pencil fa-fw"></i></h1>
+                  <h1 class="inline"><i class="fa fa-line-chart fa-fw"></i></h1>
                 </div>
                 <h2>Tingkat akurasi maksimal</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, nulla.</p>
@@ -399,7 +423,7 @@
               <div class="col-md-3 col-sm-3 text-center">
                 <div class="fade-up">
                 <div class="spec center-block wow animated pulse delay-4s">
-                  <h1 class="inline"><i class="fa fa-pencil fa-fw"></i></h1>
+                  <h1 class="inline"><i class="fa fa-chain-broken fa-fw"></i></h1>
                 </div>
                 <h2>Lebih mudah</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, nulla.</p>
@@ -408,7 +432,7 @@
               <div class="col-md-3 col-sm-3 text-center">
                 <div class="fade-up">
                 <div class="spec center-block wow animated pulse delay-6s">
-                  <h1 class="inline"><i class="fa fa-pencil fa-fw"></i></h1>
+                  <h1 class="inline"><i class="fa fa-handshake-o fa-fw"></i></h1>
                 </div>
                 <h2>Saling menguntungkan</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, nulla.</p>
