--- a/pages/upload.html
+++ b/pages/upload.html
@@ -58,33 +58,23 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 add-space">
-            <h2 class="text-primary">Upload buku</h2>
+            <h2 class="text-primary">Posting buku</h2>
             <small class="secondary-color">Cara mudah meluaskan manfaat. Pinjamkan buku anda kepada orang yang lebih membutuhkan.</small>
           </div>
           <form autocomplete="on">
           <div class="col-md-3 panelkiri">
             <h4 class="text-primary">Foto</h4>
-            <div class="thumbnail priority text-box">
-              <label for="foto1">Upload foto</label>
-              <input type="file" id="foto1" name="fotobuku1" value="">
-            </div>
-            <div class="col-md-12 no-padding fotobox text-box garisbawah add-space">
-              <div class="col-md-4 space space-left">
-                <div class="thumbnail">
-                  <label for="foto2">Foto 2</label>
-                  <input type="file" id="foto2" name="fotobuku2" value="">
+            <div class="col-md-12 no-padding">
+              <div class="col-md-6 space space-left">
+                <div class="thumbnail text-box">
+                  <label for="foto1">foto buku 1</label>
+                  <input type="file" id="foto1" name="fotobuku1" value="">
                 </div>
               </div>
-              <div class="col-md-4 space">
-                <div class="thumbnail">
-                  <label for="foto1">Foto 3</label>
-                  <input type="file" id="foto3" name="fotobuku3" value="">
-                </div>
-              </div>
-              <div class="col-md-4 space space-right">
-                <div class="thumbnail">
-                  <label for="foto1">Foto 4</label>
-                  <input type="file" id="foto3" name="fotobuku4" value="">
+              <div class="col-md-6 space space-right">
+                <div class="thumbnail text-box">
+                  <label for="foto1">foto buku 2</label>
+                  <input type="file" id="foto1" name="fotobuku1" value="">
                 </div>
               </div>
             </div>
@@ -103,7 +93,6 @@
                 </div>
                 <p class="form-control">Disewakan</p>
             </div>
-            <div class="garisbawah first-content"></div>
             <h4 class="first-content text-primary">Kategori</h4>
             <ul class="add-space block">
               <li>
@@ -142,7 +131,7 @@
           </div>
 
           <div class="col-md-9 panelkanan text-box">
-            <h4 class="text-primary">Form</h4>
+            <h4 class="text-primary">Detail buku</h4>
 
               <input class="form-control" type="text" name="" value="" placeholder="Judul Buku" required>
               <input class="form-control" list="pengarang" placeholder="Nama Pengarang" required>
@@ -184,8 +173,8 @@
               <label for="deskripsibuku" class="first-content block">Deskripsi</label>
               <textarea name="deskripsibuku" id="deskripsibuku" placeholder="Deskripsi buku, sinopsis" class="block form-control" required></textarea>
               <label for="deskripsibuku" class="first-content block">Alamat</label>
-              <textarea name="deskripsibuku" id="deskripsibuku" placeholder="Alamat dimana buku berada" class="block form-control" required></textarea>
-              <button type="button" name="upload" class="first-content add-space btn btn-primary btn-lg"><i class="fa fa-send-o"></i>&nbsp; Upload</button>
+              <textarea name="deskripsibuku" placeholder="Alamat dimana buku berada" class="block form-control" required></textarea>
+              <button type="submit" class="first-content add-space btn btn-primary btn-lg"><i class="fa fa-send-o"></i>&nbsp; Posting</button>
           </div>
           </form>
         </div>
